@@ -6,4 +6,10 @@ PerlModule Apache2::Filter::CSS::LESS
     PerlOutputFilterHandler   Apache2::Filter::CSS::LESS
 </LocationMatch>
 
+# serve .less files as css in text/plain
+<LocationMatch "\.less.txt$">
+    PerlOutputFilterHandler   Apache2::Filter::CSS::LESS
+    PerlSetVar LessContentType "text/plain"
+</LocationMatch>
+
 # vim: ft=apache
