@@ -4,14 +4,13 @@ use strict;
 use warnings FATAL => 'all';
 use lib qw(t/lib lib);
 
-use Apache2::Filter::CSS::LESS;
 use Apache::Test ':withtestmore';
 use Apache::TestUtil;
 use Apache::TestRequest 'GET';
 use Test::More;
 use My::TestHelper qw(cmp_file_ok read_file);
 
-plan tests => 6, need_lwp;
+plan tests => 8, need_lwp;
 
 use_ok('CSS::LESSp') or exit 1;
 
@@ -41,4 +40,13 @@ my $docroot = Apache::Test::vars('documentroot');
     $got      =~ s/[\r\n]//g;
 
     is $got, $expected, 'less filtering';
+}
+
+# check .less.txt is text/plain
+{
+    my $url = '/stylesheet.less.txt';
+    my $r = GET($url);
+
+    is $r->code, 200;
+    is $r->content_type, 'text/plain';
 }
