@@ -1,8 +1,9 @@
 Revision history for Perl extension Apache2::Filter::CSS::LESS.
 
 CURRENT
-    - add test for content type
     - rename to Apache2::Filter::CSS::LESS (was Apache2::Filter::CSS::LESSp).
+    - add test for content type
+    - add support for setting the content type via LessContentType
 
 0.10  Tue Nov 17 2009
     - initial version
